# SAMP-V2

./: .gitignore  LICENSE  README.md  environment.yml  extractFeatures.R  pyproject.toml  tutorial.ipynb
data/independent_test_data/: Benchmark1_AMP.txt  Benchmark1_nonAMP.txt  Benchmark2_AMP.txt  Benchmark2_nonAMP.txt
examples/: README.md  example_test.csv  example_train.csv
sampv2/: __init__.py  metrics.py  stacking.py
scripts/: train.py
