[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sampv2"
version = "0.1.0"
description = "A stacked machine-learning framework for antimicrobial peptide prediction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sampv2*"]
